[package]
name = "small-ord-set"
description = "small-ord-set."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/small-ord-set"
documentation = "https://docs.rs/small-ord-set"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
smallvec = "~1"

[dev-dependencies]