[package]
name = "small-ord-set"
description = "A set data-structure represented by a sorted `SmallVec`"
version = "0.1.2"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/small-ord-set"
documentation = "https://docs.rs/small-ord-set"
categories = ["algorithms", "data-structures"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
union = ["smallvec/union"]

[dependencies]
smallvec = "1.6.0"

[dev-dependencies]
version-sync = "0.8.1"
